[build-system]
requires = ["setuptools>=61.0", "torch"]
build-backend = "setuptools.build_meta"

[project]
name = "infinite_tensors"
version = "0.0.1"
authors = [
  { name="Alexander Goslin", email="alexander.goslin@gmail.com" },
]
description = "A Python library for performing operations on tensors with infinite dimensions."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
pythonpath = "src"