[build-system]
requires = ["setuptools>=61.0", "torch"]
build-backend = "setuptools.build_meta"

[project]
name = "infinite-tensor"
version = "1.0.0"
authors = [
  { name="Alexander Goslin", email="thegosalexander@gmail.com" },
]
description = "A Python library for performing operations on tensors with infinite dimensions."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/xandergoslin/infinite-tensor"
Issues = "https://github.com/xandergoslin/infinite-tensor/issues"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
pythonpath = "."