[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "infinite-tensor"
version = "0.2.0"
description = "A Python library for performing operations on tensors with infinite dimensions."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Alexander Goslin", email = "alexander.goslin@gmail.com" },
]
license = { text = "MIT" }
keywords = ["pytorch", "tensor", "infinite"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "numpy>=1.21.0",
  "torch>=2.0.0"
]

[project.optional-dependencies]
hdf5 = ["h5py>=3.0.0"]

[project.urls]
Homepage = "https://github.com/xandergos/infinite-tensor"
Issues = "https://github.com/xandergos/infinite-tensor/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["infinite_tensor*"]
exclude = ["tests*", "docs*", "examples*"]
